--- a/asio_sync_call/asio_sync_call.vcxproj.filters
+++ b/asio_sync_call/asio_sync_call.vcxproj.filters
@@ -15,7 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="asio_sync_call.cpp">
+    <ClInclude Include="asio_sync_call.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
